[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/pixopedia.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GameOver.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 21
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 21
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 21
font_data = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer"]
margin_right = 1019.0
margin_bottom = 599.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1019.0
margin_bottom = 599.0
color = Color( 0.027451, 0, 0, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1019.0
margin_bottom = 599.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 352.0
margin_top = 248.0
margin_right = 666.0
margin_bottom = 350.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 314.0
margin_bottom = 50.0

[node name="Game Over" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 314.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1
valign = 1

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 314.0
margin_bottom = 102.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 54.0
margin_right = 260.0
margin_bottom = 48.0

[node name="PlayAgainContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 206.0
margin_bottom = 22.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/PlayAgainContainer"]
margin_left = 23.0
margin_right = 182.0
margin_bottom = 22.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/PlayAgainContainer/HBoxContainer"]
margin_right = 13.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 2 )
text = ">"
align = 1
valign = 1

[node name="Play Again" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/PlayAgainContainer/HBoxContainer"]
margin_left = 17.0
margin_right = 159.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 3 )
text = "Play Again"
align = 1
valign = 1

[node name="PlayAgainContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 26.0
margin_right = 206.0
margin_bottom = 48.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/PlayAgainContainer2"]
margin_right = 206.0
margin_bottom = 22.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/PlayAgainContainer2/HBoxContainer"]
margin_right = 13.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 2 )
text = ">"
align = 1
valign = 1

[node name="Return to Menu" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/PlayAgainContainer2/HBoxContainer"]
margin_left = 17.0
margin_right = 206.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 4 )
text = "Return to Menu"
align = 1
valign = 1
